# python-benchmarks

./: .gitignore  Makefile  config.py  make-envs.py  provision.sh  pyproject.toml  requirements.txt  run-benchs.py
notes/: result-20201212.txt
playground/: mandelbrot.py  wasm.py
programs/binarytrees/: binarytrees-6.py-fail  binarytrees-multiprocessing.py  binarytrees-mypyc.py  binarytrees.c  binarytrees.numba.py  binarytrees.py  binarytrees.pyx-fail
programs/binarytrees-par/: binarytrees-7.py-fail  binarytrees-mp.py
programs/binarytrees-seq/: binarytrees-mypyc.py  binarytrees.c  binarytrees.java  binarytrees.js  binarytrees.lua  binarytrees.py  binarytrees.rb
programs/fannkuchredux/: fannkuchredux-6.py  fannkuchredux.py
programs/fasta/: fasta-2.py  fasta-3.py  fasta-4.py  fasta-5.py  fasta-5.py-fail  fasta.c  fasta.py  fasta.pyx
programs/fastaredux/: fastaredux-6.py  fastaredux-7.py  fastaredux.py  fastaredux.pyx
programs/fib50/: fib50-numba.py  fib50.grumpy  fib50.python  fib50.python3  fib50.pyx
programs/fibonacci/: fibonacci-2.py  fibonacci-3.py  fibonacci-3.pyx  fibonacci-numba-3.py  fibonacci-numba.py  fibonacci.cython  fibonacci.numba-3.numba  fibonacci.py  fibonacci.python  fibonacci.python-2.python  fibonacci.python-3.python  fibonacci.python3  fibonacci.python3-2.python3
programs/iobench/: iobench-numba.py  iobench.pxd  iobench.py
programs/jsonbench/: jsonbench.cython  jsonbench.py  jsonbench.python  jsonbench.pyx
programs/knucleotide/: knucleotide-2.py  knucleotide-2.pyx  knucleotide-3.py  (+7 more)
web/: index.html.tpl  notes.html  publish.py
(+97 files in other folders)
