[tool.poetry]
name = "python-benchmarks"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.8"

devtools = "*"
plumbum = "^1.6.9"
# pycairo = "*"
fire = "^0.3.1"
# PyGObject = "*"

[tool.poetry.dev-dependencies]
docformatter = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
