[tool.poetry]
name = "python-benchmarks"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]
license = "Apache"


[tool.poetry.dependencies]
python = "^3.8,<3.10"

devtools = "*"
plumbum = "^1.6.9"
fire = "^0.3.1"
Jinja2 = "^2.11.2"
rich = "^10.11.0"

numba = "^0.54.0"
# pycairo = "*"
# PyGObject = "*"


[tool.poetry.dev-dependencies]
docformatter = "^1.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
